set <picture> tag to use .webp images

--- a/Tribake/recruit.html
+++ b/Tribake/recruit.html
@@ -56,7 +56,10 @@
 </head>
 <body>
 	<div id="cover-wrap">
-		<img id="cover" src="spring_recruit_2018.jpg" alt="Tribake 春季實習生招募封面照">
+		<picture>
+			<source srcset="spring_recruit_2018.webp" type="image/webp">
+			<img id="cover" src="spring_recruit_2018.jpg" alt="Tribake 春季實習生招募封面照">
+		</picture>
 	</div>
 	<div id="content-wrap">
 		<h3>【三三集團-樂芽實習生計畫】2018 春季實習生招募</h3>
